--- a/styles/style.css
+++ b/styles/style.css
@@ -1,27 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-body{
+
+body {
     font-family: "Inter", sans-serif;
 }
 
-*{
+* {
     margin: 0;
+    padding: 0;
 }
 
+/* header section start */
+.container {
+    width: 100%;
+    height: 720px;
+    margin: 0 auto;
+    background: linear-gradient(to bottom, #282727, #212020, #141414);
+}
+
+/* header section ends */
+
+
+
 /* nav bar style start */
-.container{
-    width: 90%;
-    margin: 3rem;
+.nav-content {
+    padding: 3rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: 25px;
-    background-color:rgb(17, 17, 17);
-    
+    color: white;
+    margin-left: 70px;
 
 }
 
-.navbar-heading{
+.navbar-heading {
     display: flex;
     gap: 30px;
     border: 1px solid rgb(60, 56, 56);
@@ -31,24 +44,158 @@ body{
     align-items: center;
     padding-right: 10px;
     font-size: 15px;
+    color: white;
+    margin-right: 130px;
 }
 
-.home-btn{
+.home-btn {
     border-radius: 40px;
     padding: 5px 15px;
     background-color: rgb(230, 83, 60);
     color: white;
     border: none;
-    font-size: 15px;    
-    
+    font-size: 15px;
+
 }
 
 /* nav bar style ends */
 
+/* banner-section-starts */
 
-/* banner section start */
+.banner-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-side-text {
+    width: 100%;
+    height: 440px;
+    margin: 40px;
+}
+
+.shape {
+    font-family: 'miama', sans-serif;
+    font-size: 120px;
+    font-weight: 200;
+}
+
+.left-side-text h1 {
+    font-size: 70px;
+    font-weight: 800;
+    color: white;
+    margin-top: 30px;
+    line-height: 100%;
+    margin-left: 70px;
+
+}
+
+.left-side-text p {
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 20px;
+    margin-left: 70px;
+}
+
+.right-side-img {
+    width: 400px;
+    margin-right: 100px;
+    position: relative;
 
 
-/* banner section ends */
+}
+
+.right-side-img img {
+    width: 350px;
+    height: 580px;
+
+}
 
 
+.btn-style {
+    margin-top: 20px;
+}
+
+.btn-join-club {
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 40px;
+    background-color: rgba(230, 83, 60);
+    padding: 12px 30px 12px 30px;
+    color: white;
+    border-style: none;
+    margin-top: 20px;
+    margin-left: 70px;
+}
+
+.btn-download-app {
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 40px;
+    padding: 12px 30px 12px 30px;
+    color: white;
+    border-style: none;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 42px;
+    margin-left: 10px;
+    background: transparent;
+
+}
+
+
+.video-card-350{
+    width: 130px;
+    height: 50px;
+    background: rgba(48, 48, 48, 0.54);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: rgb(244, 234, 234);
+    border-radius: 12px;
+    position: absolute;
+    margin: 0 auto;
+    right: 72%;
+    top: 70%;
+    padding: 10px;
+    backdrop-filter: blur(20px);
+    text-align: right;
+}
+
+.video-card-500{
+    width: 130px;
+    height: 50px;
+    background: rgba(48, 48, 48, 0.54);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    color: rgb(244, 234, 234);
+    border-radius: 12px;
+    position: absolute;
+    margin: 0 auto;
+    right: -10%;
+    top: 25%;
+    padding: 10px;
+    backdrop-filter: blur(20px);
+    text-align: left;
+}
+
+.circle{
+    border: 2px solid red;
+    border-radius: 50%;
+  
+}
+
+  .video-paragraph{
+    font-size: 12px;
+    color: rgba(239, 237, 232, 0.65);
+    text-align: left;
+}
+ .workout-paragraph{
+    font-size: 12px;
+    color: rgba(239, 237, 232, 0.65);
+    text-align: left;
+}
+
+
+    
+/* banner-section-ends */
+
+
+/* habit section start */
