--- a/styles/style.css
+++ b/styles/style.css
@@ -157,8 +157,24 @@ body {
     top: 70%;
     padding: 10px;
     backdrop-filter: blur(20px);
-    text-align: right;
+    text-align: left;
+    
 }
+
+.circle{
+    color: red;
+    margin-right: 10px;
+    
+  
+    
+}
+
+.video-paragraph {
+    font-size: 12px;
+    color: rgba(239, 237, 232, 0.65);
+    margin-left: 30px;
+}
+
 
 .video-card-500 {
     width: 130px;
@@ -176,17 +192,6 @@ body {
     text-align: left;
 }
 
-.circle {
-    border: 2px solid red;
-    border-radius: 50%;
-
-}
-
-.video-paragraph {
-    font-size: 12px;
-    color: rgba(239, 237, 232, 0.65);
-    text-align: left;
-}
 
 .workout-paragraph {
     font-size: 12px;
@@ -352,59 +357,135 @@ body {
 
 }
 
+.calculator-container{
+    width: 100%;
+    height: 400px;
+    background-color: rgb(34, 34, 34);
+    /* border: 2px solid red; */
+}
+
 .BMI-calculator-style {
     width: 1060px;
-    height: 250px;
-    border: 1px solid red;
+    height: 350px;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    margin-top: 20px;
+    background-color: rgb(34, 34, 34);
 
 }
 
 .calculator-chart {
     width: 30%;
+    margin-top: 40px;
+}
+
+
+.calculator-chart h1 {
+    color: rgb(255, 255, 255);
 }
 
 
 .calculate-your-BMI {
     width: 50%;
+    margin-top: 40px;
+}
+
+.calculate-your-BMI h1 {
+   color: rgb(255, 255, 255);
+}
+
+.calculate-your-BMI p {
+    margin-top: 10px;
+   color: rgba(255, 255, 255, 0.5);
 }
 
 table {
-    border: 1px solid black;
+    border: 1px solid rgb(85, 82, 82);
     width: 100%;
     border-collapse: collapse;
+    margin-top: 10px;
 }
 
 th {
-    border: 1px solid black;
+    border: 1px solid rgb(72, 69, 69);
     text-align: left;
     padding: 10px;
+    color:rgb(255, 255, 255)
 }
 
 td {
-    border: 1px solid black;
+    border: 1px solid rgb(90, 87, 87);
     text-align: left;
     padding: 10px;
 }
 
 tr {
     width: 10px;
+    color: rgba(255, 255, 255, 0.5);
+    
 }
 
 
 .form-design {
-    width: 40%;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 3fr);
-    gap: 5px;
+    gap: 10px;
+    margin-top: 10px;
+    
 }
 
-.activity {
-    height: 50px;
+.height-cm{
+    padding: 15px;
+    border-radius: 10px;
+     background: rgba(255, 255, 255, 0.1);
+     grid-column: span 1;
+     border-style: none;
 }
+.weight-kg{
+    padding: 15px;
+    border-radius: 10px;
+     background: rgba(255, 255, 255, 0.1);
+     grid-column: span 1;
+     border-style: none;
+}
+.sex{
+    padding: 15px;
+    border-radius: 10px;
+     background: rgba(255, 255, 255, 0.1);
+     grid-column: span 1;
+     border-style: none;
+}
+.age{
+    padding: 15px;
+    border-radius: 10px;
+     background: rgba(255, 255, 255, 0.1);
+     grid-column: span 1;
+     border-style: none;
+}
+
+.activity{
+    padding: 15px;
+    border-radius: 10px;
+     background: rgba(255, 255, 255, 0.1);
+     grid-column: span 2;
+     border-style: none;
+}
+
+.calculator-btn{
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 40px;
+    background-color: rgba(230, 83, 60);
+    padding: 12px 30px 12px 30px;
+    color: white;
+    border-style: none;
+    margin-top: 20px;
+    
+}
+
+
 
 
 /* BMI calculator section end */
@@ -412,26 +493,48 @@ tr {
 
 /* Trainer section start */
 
-.meet-our-team {
-    width: 1060px;
-    height: 620px;
+.meet-our-team{
+    width: 100%;
+    background-color: rgb(8, 8, 8);
+    padding-top: 50px;
     /* border: 2px solid red; */
+   
+    
+}
+
+.meet-our-team-container {
+    width: 1060px;
+    height: 750px;
+    /* border: 2px solid rgb(238, 233, 233); */
     margin: 0 auto;
+    
   
 }
 
 .meet-our-team-content{
     text-align: center;
+    
+}
+.meet-our-team-content h1{
+    color: rgb(255, 255, 255);
+   
+}
+.meet-our-team-content p{
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .display-grid {
     width: 1060px;
     height: 600px;
-    /* border: 2px solid red; */
+    border-radius: 16px;
+    margin: 0 auto;
     display: grid;
+    margin-top: 20px;
+    padding-left: 25px;
     justify-content: center;
+    align-items: center;
     grid-template-columns: repeat(3, 1fr);
-    margin: 0 auto;  
+    background-color: rgba(255, 255, 255, 0.1);   
     
 }
 
@@ -448,7 +551,7 @@ tr {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
 }
 
 .trainer-1 img {
@@ -472,7 +575,7 @@ tr {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
 }
 
 .trainer-2 img {
@@ -496,7 +599,7 @@ tr {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
 }
 
 .trainer-3 img {
@@ -519,7 +622,7 @@ tr {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
 }
 
 .trainer-4 img {
@@ -543,7 +646,7 @@ tr {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
 }
 
 
@@ -564,12 +667,14 @@ tr {
     top: 70%;
     color: white;
     margin: 10px;
+    text-align: left;
 }
 .trainer-6 p{
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
-    margin: 10px;
+    margin: 15px;
+    
 }
 .trainer-6 img {
     width: 326px;
@@ -579,11 +684,14 @@ tr {
 
 
 /* footer section start */
-
+.footer-banner{
+    width: 100%;
+    background-color: rgb(34, 34, 34);
+}
 .footer-container{
     /* border: 2px solid red; */
     width: 1060px;
-    height: 200px;
+    height: 250px;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
@@ -591,21 +699,60 @@ tr {
 
 }
 
+.footer-content-style{
+
+}
+.footer-content-style h1{
+    font-size: 3rem;
+    font-weight: 800px;
+}
+.footer-content-style p{
+color: rgba(255, 255, 255, 0.5);
+margin-top: 15px;
+}
+
+.list-style{
+    
+}
+.list-style h3{
+    color: rgb(255, 255, 255);
+}
+
 .list-item-1{
     list-style: none;
+    color: rgba(255, 255, 255, 0.5);
+    
+}
+.list-item-1 li{
+    padding: 5px;
+    
 }
 .list-item-2{
     list-style: none;
+    color: rgba(255, 255, 255, 0.5);
+        
+}
+.list-item-2 li{
+    padding: 5px;
+        
 }
 
 .copyright{
-    text-align: center;
+    
+    
 }
 .copyright hr{
     width: 50%;
     margin: 0 auto;
+    border-color: rgba(255, 255, 255, 0.1)
+  
    
 }
-
+.copyright p{
+    text-align: center;
+    color: rgba(255, 255, 255, 0.5);
+    padding-bottom: 10px;  
+   
+}
 /* footer section end */
 
