--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 25px;
+    font-size: 1.5rem;
     color: white;
     margin-left: 70px;
 
@@ -43,7 +43,7 @@ body {
     justify-content: center;
     align-items: center;
     padding-right: 10px;
-    font-size: 15px;
+    font-size: 1rem;
     color: white;
     margin-right: 130px;
 }
@@ -54,7 +54,7 @@ body {
     background-color: rgb(230, 83, 60);
     color: white;
     border: none;
-    font-size: 15px;
+    font-size: 1rem;
 
 }
 
@@ -75,12 +75,12 @@ body {
 
 .shape {
     font-family: 'miama', sans-serif;
-    font-size: 120px;
+    font-size: 9rem;
     font-weight: 200;
 }
 
 .left-side-text h1 {
-    font-size: 70px;
+    font-size: 5rem;
     font-weight: 800;
     color: white;
     margin-top: 30px;
@@ -90,7 +90,7 @@ body {
 }
 
 .left-side-text p {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 400;
     color: rgba(255, 255, 255, 0.5);
     margin-top: 20px;
@@ -117,7 +117,7 @@ body {
 }
 
 .btn-join-club {
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 600;
     border-radius: 40px;
     background-color: rgba(230, 83, 60);
@@ -129,7 +129,7 @@ body {
 }
 
 .btn-download-app {
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 600;
     border-radius: 40px;
     padding: 12px 30px 12px 30px;
@@ -158,19 +158,17 @@ body {
     padding: 10px;
     backdrop-filter: blur(20px);
     text-align: left;
-    
+
 }
 
-.circle{
+.circle {
     color: red;
     margin-right: 10px;
-    
-  
-    
+
 }
 
 .video-paragraph {
-    font-size: 12px;
+    font-size: 0.7rem;
     color: rgba(239, 237, 232, 0.65);
     margin-left: 30px;
 }
@@ -194,7 +192,7 @@ body {
 
 
 .workout-paragraph {
-    font-size: 12px;
+    font-size: 0.8rem;
     color: rgba(239, 237, 232, 0.65);
     text-align: left;
 }
@@ -224,7 +222,7 @@ body {
 }
 
 .habit-content h1 {
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 900;
     color: rgb(255, 255, 255);
     padding-top: 50px;
@@ -232,7 +230,7 @@ body {
 }
 
 .habit-content p {
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     margin-top: 10px;
@@ -254,7 +252,7 @@ body {
 
 .img-container h3 {
     text-align: center;
-    font-size: 18px;
+    font-size: 1.2rem;
     font-weight: 600;
     line-height: 120%;
     margin-top: 10px;
@@ -263,7 +261,7 @@ body {
 
 .img-container p {
     text-align: center;
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 18px;
     margin-top: 10px;
@@ -295,7 +293,7 @@ body {
 
 .run-banner-content h1 {
     color: rgb(255, 255, 255);
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 900;
     line-height: 120%;
     margin-left: 40px;
@@ -304,14 +302,15 @@ body {
 
 .run-banner-content p {
     color: rgba(255, 255, 255, 0.5);
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
     margin-left: 40px;
+    margin-top: 15px;
 }
 
 .run-banner-btn {
-    font-size: 18px;
+    font-size: 1rem;
     font-weight: 600;
     border-radius: 40px;
     background-color: rgba(230, 83, 60);
@@ -322,11 +321,12 @@ body {
     margin-left: 40px;
 }
 
-.img-style img {
+.run-img-style img {
     width: 300px;
     height: 280px;
     border-radius: 18px;
     margin-right: 20px;
+    
 }
 
 
@@ -344,30 +344,29 @@ body {
 
 .BMI-content h1 {
     color: rgb(255, 255, 255);
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 900;
     line-height: 120%;
 }
 
 .BMI-content p {
     color: rgba(255, 255, 255, 0.5);
-    font-size: 14px;
+    font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
 
 }
 
-.calculator-container{
+.calculator-container {
     width: 100%;
     height: 400px;
     background-color: rgb(34, 34, 34);
-    /* border: 2px solid red; */
+  
 }
 
 .BMI-calculator-style {
     width: 1060px;
     height: 350px;
-    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
@@ -392,26 +391,27 @@ body {
 }
 
 .calculate-your-BMI h1 {
-   color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
 .calculate-your-BMI p {
-    margin-top: 10px;
-   color: rgba(255, 255, 255, 0.5);
+    margin-top: 15px;
+    color: rgba(255, 255, 255, 0.5);
 }
 
 table {
     border: 1px solid rgb(85, 82, 82);
     width: 100%;
     border-collapse: collapse;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 th {
     border: 1px solid rgb(72, 69, 69);
     text-align: left;
     padding: 10px;
-    color:rgb(255, 255, 255)
+    color: rgb(255, 255, 255)
+    
 }
 
 td {
@@ -423,7 +423,7 @@ td {
 tr {
     width: 10px;
     color: rgba(255, 255, 255, 0.5);
-    
+
 }
 
 
@@ -432,49 +432,59 @@ tr {
     display: grid;
     grid-template-columns: repeat(2, 3fr);
     gap: 10px;
-    margin-top: 10px;
-    
+    margin-top: 15px;
+
 }
 
-.height-cm{
+.height-cm {
+    font-size: 1rem;
     padding: 15px;
     border-radius: 10px;
-     background: rgba(255, 255, 255, 0.1);
-     grid-column: span 1;
-     border-style: none;
-}
-.weight-kg{
-    padding: 15px;
-    border-radius: 10px;
-     background: rgba(255, 255, 255, 0.1);
-     grid-column: span 1;
-     border-style: none;
-}
-.sex{
-    padding: 15px;
-    border-radius: 10px;
-     background: rgba(255, 255, 255, 0.1);
-     grid-column: span 1;
-     border-style: none;
-}
-.age{
-    padding: 15px;
-    border-radius: 10px;
-     background: rgba(255, 255, 255, 0.1);
-     grid-column: span 1;
-     border-style: none;
+    background: rgba(255, 255, 255, 0.1);
+    grid-column: span 1;
+    border-style: none;
 }
 
-.activity{
+.weight-kg {
+    font-size: 1rem;
     padding: 15px;
     border-radius: 10px;
-     background: rgba(255, 255, 255, 0.1);
-     grid-column: span 2;
-     border-style: none;
+    background: rgba(255, 255, 255, 0.1);
+    grid-column: span 1;
+    border-style: none;
 }
 
-.calculator-btn{
-    font-size: 18px;
+.sex {
+    font-size: 1rem;
+    padding: 15px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    grid-column: span 1;
+    border-style: none;
+    color: rgba(181, 175, 175, 0.952);
+}
+
+.age {
+    font-size: 1rem;
+    padding: 15px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    grid-column: span 1;
+    border-style: none;
+}
+
+.activity {
+    font-size: 1rem;
+    padding: 15px;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.1);
+    grid-column: span 2;
+    border-style: none;
+    color: rgba(181, 175, 175, 0.952);
+}
+
+.calculator-btn {
+    font-size: 1rem;
     font-weight: 600;
     border-radius: 40px;
     background-color: rgba(230, 83, 60);
@@ -482,45 +492,46 @@ tr {
     color: white;
     border-style: none;
     margin-top: 20px;
-    
+
 }
-
-
-
 
 /* BMI calculator section end */
 
 
 /* Trainer section start */
 
-.meet-our-team{
+.meet-our-team {
     width: 100%;
     background-color: rgb(8, 8, 8);
     padding-top: 50px;
-    /* border: 2px solid red; */
-   
-    
+
+
+
 }
 
 .meet-our-team-container {
     width: 1060px;
-    height: 750px;
-    /* border: 2px solid rgb(238, 233, 233); */
+    height: 800px;
     margin: 0 auto;
-    
-  
+
+
 }
 
-.meet-our-team-content{
+.meet-our-team-content {
     text-align: center;
-    
+
 }
-.meet-our-team-content h1{
+
+.meet-our-team-content h1 {
+    font-size: 2.5rem;
     color: rgb(255, 255, 255);
-   
+
 }
-.meet-our-team-content p{
+
+.meet-our-team-content p {
+    font-size: 1rem;
     color: rgba(255, 255, 255, 0.5);
+    margin-top: 15px;
 }
 
 .display-grid {
@@ -529,25 +540,27 @@ tr {
     border-radius: 16px;
     margin: 0 auto;
     display: grid;
-    margin-top: 20px;
+    margin-top: 50px;
     padding-left: 25px;
     justify-content: center;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
-    background-color: rgba(255, 255, 255, 0.1);   
-    
+    background-color: rgba(255, 255, 255, 0.1);
+
 }
 
-.trainer-1{
+.trainer-1 {
     position: relative;
 }
-.trainer-1 h3{
+
+.trainer-1 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
 }
-.trainer-1 p{
+
+.trainer-1 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
@@ -558,20 +571,21 @@ tr {
     width: 326px;
     height: 272px;
     border-radius: 16px;
-  
+
 }
 
-.trainer-2{
+.trainer-2 {
     position: relative;
 }
 
-.trainer-2 h3{
+.trainer-2 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
 }
-.trainer-2 p{
+
+.trainer-2 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
@@ -582,20 +596,21 @@ tr {
     width: 326px;
     height: 272px;
     border-radius: 16px;
-  
+
 }
 
-.trainer-3{
+.trainer-3 {
     position: relative;
 }
 
-.trainer-3 h3{
+.trainer-3 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
 }
-.trainer-3 p{
+
+.trainer-3 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
@@ -608,17 +623,18 @@ tr {
     border-radius: 16px;
 }
 
-.trainer-4{
+.trainer-4 {
     position: relative;
 }
 
-.trainer-4 h3{
+.trainer-4 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
 }
-.trainer-4 p{
+
+.trainer-4 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
@@ -632,17 +648,18 @@ tr {
 }
 
 
-.trainer-5{
+.trainer-5 {
     position: relative;
 }
 
-.trainer-5 h3{
+.trainer-5 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
 }
-.trainer-5 p{
+
+.trainer-5 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
@@ -658,24 +675,26 @@ tr {
 
 
 
-.trainer-6{
+.trainer-6 {
     position: relative;
 }
 
-.trainer-6 h3{
+.trainer-6 h3 {
     position: absolute;
     top: 70%;
     color: white;
     margin: 10px;
     text-align: left;
 }
-.trainer-6 p{
+
+.trainer-6 p {
     position: absolute;
     top: 76%;
     color: rgb(184, 172, 172);
     margin: 15px;
-    
+
 }
+
 .trainer-6 img {
     width: 326px;
     height: 272px;
@@ -684,75 +703,90 @@ tr {
 
 
 /* footer section start */
-.footer-banner{
+.footer-banner {
     width: 100%;
     background-color: rgb(34, 34, 34);
+    padding-top: 30px;
 }
-.footer-container{
-    /* border: 2px solid red; */
+
+.footer-container {
     width: 1060px;
     height: 250px;
     display: flex;
     margin: 0 auto;
     justify-content: space-between;
-    align-items: center;
+   
 
 }
 
-.footer-content-style{
-
+.footer-content-style {
+   
 }
-.footer-content-style h1{
+
+.footer-content-style h1 {
     font-size: 3rem;
     font-weight: 800px;
-}
-.footer-content-style p{
-color: rgba(255, 255, 255, 0.5);
-margin-top: 15px;
+    margin-top: 20px;
 }
 
-.list-style{
-    
+.footer-content-style p {
+    font-size: 1rem;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 15px;
 }
-.list-style h3{
+
+.list-style {
+    margin-top: 20px;
+}
+
+.list-style h3 {
+    font-size: 1.5rem;
     color: rgb(255, 255, 255);
+    
 }
 
-.list-item-1{
+.list-item-1 {
     list-style: none;
     color: rgba(255, 255, 255, 0.5);
-    
-}
-.list-item-1 li{
-    padding: 5px;
-    
-}
-.list-item-2{
-    list-style: none;
-    color: rgba(255, 255, 255, 0.5);
-        
-}
-.list-item-2 li{
-    padding: 5px;
-        
+    margin-top: 20px;
+
 }
 
-.copyright{
+.list-item-1 li {
+    padding: 5px;
     
-    
+
 }
-.copyright hr{
+
+.list-item-2 {
+    list-style: none;
+    color: rgba(255, 255, 255, 0.5);
+    margin-top: 20px;
+
+}
+
+.list-item-2 li {
+    padding: 5px;
+
+}
+
+.copyright {
+
+}
+
+.copyright hr {
     width: 50%;
     margin: 0 auto;
     border-color: rgba(255, 255, 255, 0.1)
-  
-   
 }
-.copyright p{
+
+.copyright p {
+    font-size: 1rem;
     text-align: center;
     color: rgba(255, 255, 255, 0.5);
-    padding-bottom: 10px;  
-   
-}
-/* footer section end */
+    padding-bottom: 20px;
+    margin-top: 15px;
 
+}
+
+/* footer section end */
